--- a/src/components/sidebar/styles.module.css
+++ b/src/components/sidebar/styles.module.css
@@ -2,7 +2,7 @@
   min-width: 200px;
   width: 100%;
   max-width: 300px;
-  min-height: 100%;
+  height: 100%;
   background-color: #8bcce7;
 }
 
