--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,13 @@
 }
 html,
 body {
+  width: 100%;
   height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: auto;
 }
+
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
